[NA] [P SDK] Reverted to use standard `setup-python` action

--- a/.github/workflows/sdk-e2e-tests.yaml
+++ b/.github/workflows/sdk-e2e-tests.yaml
@@ -39,15 +39,10 @@ jobs:
         - name: Checkout
           uses: actions/checkout@v4.1.1
             
-#        - name: Setup Python ${{matrix.python_version}}
-#          uses: actions/setup-python@v5
-#          with:
-#            python-version: ${{matrix.python_version}}
-
-        - name: Install uv and set the Python version ${{ matrix.python_version }}
-          uses: astral-sh/setup-uv@v5
+        - name: Setup Python ${{matrix.python_version}}
+          uses: actions/setup-python@v5
           with:
-            python-version: ${{ matrix.python_version }}
+            python-version: ${{matrix.python_version}}
       
         - name: Run latest Opik server
           env:
@@ -68,13 +63,8 @@ jobs:
 
         - name: Install opik SDK
           run: |
-            # create virtual environment
-            uv venv ${{ inputs.library_name }}-env --python ${{ inputs.python_version }}
-            source ${{ inputs.library_name }}-env/bin/activate
-        
-        
             cd ${{ github.workspace }}/sdks/python
-            uv pip install .
+            pip install .
 
         - name: Run smoke tests
           run: |
@@ -84,8 +74,8 @@ jobs:
         - name: Install test requirements
           run: |
             cd ${{ github.workspace }}/sdks/python
-            uv pip install -r tests/test_requirements.txt
-            uv pip list
+            pip install -r tests/test_requirements.txt
+            pip list
 
         - name: Run tests
           run: |
