Revision 18: Add X-Opik-Nginx header for nginx layer identification
Add custom response header to identify Opik frontend nginx in multi-proxy
environments (ALB → Ingress → Opik Nginx). This helps diagnose which nginx
layer is returning 413 errors when troubleshooting large file uploads.

--- a/deployment/helm_chart/opik/templates/configmap-frontend-nginx.yaml
+++ b/deployment/helm_chart/opik/templates/configmap-frontend-nginx.yaml
@@ -75,6 +75,9 @@ data:
         # Increased to 2GB to support large CSV uploads (OPIK-3077)
         client_max_body_size 2000M;
         
+        # Add custom header to identify this nginx instance in multi-proxy setups
+        add_header X-Opik-Nginx "frontend" always;
+        
         {{- $rootPath := ternary "" "/opik" .Values.standalone }}
 
         location @api {
