[NA] [P SDK] Temporarily disable guardrails in E2E tests due to GitHub runner limitations
- Commented out `--guardrails` command in SDK E2E test workflow to prevent storage issues.
- Added module-level skip in `test_guardrails.py` with a reason for disabled guardrails.

--- a/.github/workflows/sdk-e2e-tests.yaml
+++ b/.github/workflows/sdk-e2e-tests.yaml
@@ -49,7 +49,8 @@ jobs:
             OPIK_USAGE_REPORT_ENABLED: false
           run: |
             cd ${{ github.workspace }}
-            ./opik.sh --build --guardrails
+            ./opik.sh --build
+#            ./opik.sh --build --guardrails
         
         - name: Check Opik server availability
           shell: bash
