--- a/deployment/helm_chart/opik/templates/configmap-frontend-nginx.yaml
+++ b/deployment/helm_chart/opik/templates/configmap-frontend-nginx.yaml
@@ -73,7 +73,7 @@ data:
         server_name localhost;
         
         # Increased to 2GB to support large CSV uploads (OPIK-3077)
-        client_max_body_size 2000M;
+        client_max_body_size {{ .Values.component.frontend.clientMaxBodySize | default "2000M" }};
         
         # Add custom header to identify this nginx instance in multi-proxy setups
         add_header X-Opik-Nginx "frontend" always;
