add default storage for backend and frontend pods

--- a/deployment/helm_chart/opik/values.yaml
+++ b/deployment/helm_chart/opik/values.yaml
@@ -67,6 +67,9 @@ component:
         registry: docker.io
         repository: busybox
         tag: 1.36
+    resources:
+      requests:
+        ephemeral-storage: 10Gi
     livenessProbe:
       path: /health-check?name=all&type=alive
       port:  8080
@@ -205,6 +208,9 @@ component:
       enabled: false
     backendConfigMap:
       enabled: false
+    resources:
+      requests:
+        ephemeral-storage: 10Gi
     volumeMounts:
     - mountPath: /etc/nginx/conf.d/
       name: opik-frontend-nginx
