Revision 2: Update PYTHON_EVALUATOR_URL and PYTHON_BACKEND_URL to use configurable port
- Updated docker-compose.yaml to use PYTHON_BACKEND_PORT in URLs
- Updated Helm chart values.yaml to include PYTHON_BACKEND_PORT
- Updated Helm configmap template to dynamically construct PYTHON_EVALUATOR_URL
- Updated demo-data-generator-job to use configurable port in healthcheck and URL

--- a/deployment/helm_chart/opik/templates/configmap-backend.yaml
+++ b/deployment/helm_chart/opik/templates/configmap-backend.yaml
@@ -18,10 +18,13 @@ data:
   AWS_SECRET_ACCESS_KEY: ""
   IS_MINIO: "false"
   {{- end }}
+  PYTHON_EVALUATOR_URL: "http://opik-python-backend:{{ index $.Values.component "python-backend" "env" "PYTHON_BACKEND_PORT" | default "8000" }}"
   {{- end }}
   
   {{- range $envkey, $envvalue := $value.env }}
+  {{- if not (and (eq $key "backend") (eq $envkey "PYTHON_EVALUATOR_URL")) }}
   {{ $envkey }}: {{ $envvalue | quote }}
+  {{- end }}
   {{- end }}
 {{- end }}
 {{- end }}
