--- a/deployment/helm_chart/opik/values.yaml
+++ b/deployment/helm_chart/opik/values.yaml
@@ -147,6 +147,7 @@ component:
       PYTHON_CODE_EXECUTOR_PARALLEL_NUM: "5"
       PYTHON_CODE_EXECUTOR_EXEC_TIMEOUT_IN_SECS: "3"
       PYTHON_CODE_EXECUTOR_ALLOW_NETWORK: "false"
+      PYTHON_BACKEND_PORT: "8000"
       OPIK_REVERSE_PROXY_URL: "http://opik-frontend:5173/api"
       OTEL_SERVICE_NAME: "opik-python-backend"
       OTEL_METRIC_EXPORT_INTERVAL: "60000"
