--- a/.github/workflows/build_and_push_docker.yaml
+++ b/.github/workflows/build_and_push_docker.yaml
@@ -1,130 +1,277 @@
-name: "Build Docker Images"
+name: "Build Docker Images Multi-Arch"
 
 on:
   workflow_call:
     inputs:
-        image:
-            type: string
-            required: true
-            description: Docker Image
-        version:
-            type: string
-            required: true
-            description: Version
-        build_from:
-            type: string
-            required: true
-            description: Original version to build from 
-            default: ""
-        build_comet_image:
-            type: boolean
-            required: true
-            description: If to build a Comet integration image
-            default: false
-        comet_build_args:
-            type: string
-            required: false
-            default: ""
-            description: Arguments for cloud docker build
-        is_release:
-            type: boolean
-            required: true
-            description: If this is a release build (will build multi-arch and push latest tag)
-            default: false
+      image:
+        type: string
+        required: true
+        description: Docker Image
+      version:
+        type: string
+        required: true
+        description: Version
+      build_from:
+        type: string
+        required: true
+        description: Original version to build from 
+        default: ""
+      build_comet_image:
+        type: boolean
+        required: true
+        description: If to build a Comet integration image
+        default: false
+      comet_build_args:
+        type: string
+        required: false
+        default: ""
+        description: Arguments for cloud docker build
+      is_release:
+        type: boolean
+        required: true
+        description: If this is a release build (will build multi-arch and push latest tag)
+        default: false
     secrets:
       OPIK_FE_SENTRY_DSN:
         required: false
+  workflow_dispatch:
+    inputs:
+      image:
+        type: string
+        required: true
+        description: Docker Image
+      version:
+        type: string
+        required: true
+        description: Version
+      build_from:
+        type: string
+        required: true
+        description: Original version to build from 
+        default: ""
+      build_comet_image:
+        type: boolean
+        required: true
+        description: If to build a Comet integration image
+        default: false
+      comet_build_args:
+        type: string
+        required: false
+        default: ""
+        description: Arguments for cloud docker build
+      is_release:
+        type: boolean
+        required: true
+        description: If this is a release build (will build multi-arch and push latest tag)
+        default: false
 
 env:
-  DOCKER_REGISTRY: "ghcr.io/comet-ml/opik" 
+  DOCKER_REGISTRY: "ghcr.io/comet-ml/opik"
 
 jobs:
-
-  build-n-push-image:
-    runs-on: ubuntu-latest
+  build:
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - image_type: regular
+            image_suffix: ""
+            platform: amd64
+          - image_type: regular
+            image_suffix: ""
+            platform: arm64
+            skip_guardrails: true
+          - image_type: comet
+            image_suffix: "-comet"
+            platform: amd64
+          - image_type: comet
+            image_suffix: "-comet"
+            platform: arm64
+            skip_guardrails: true
+    runs-on: ${{ matrix.platform == 'amd64' && 'ubuntu-latest' || 'ubuntu-24.04-arm' }}
+    name: ${{ matrix.platform }} ${{ inputs.image }}${{ matrix.image_suffix }}
+    permissions:
+      contents: read
+      packages: write
+    outputs:
+      digest: ${{ steps.build.outputs.digest }}
+      image_name: ${{ steps.set_vars.outputs.image_name }}
     timeout-minutes: 60
     steps:
-        - name: Checkout
-          uses: actions/checkout@v4.1.1
-          with:
-            ref: ${{inputs.build_from}}
+      - name: Check if job should run
+        id: check
+        run: |
+          SHOULD_RUN="false"
+          if [[ "${{ matrix.image_type }}" == "regular" ]] || [[ "${{ inputs.build_comet_image }}" == "true" ]]; then
+            if [[ "${{ matrix.platform }}" != "arm64" ]] || [[ "${{ matrix.skip_guardrails }}" != "true" ]] || [[ "${{ inputs.image }}" != "opik-guardrails-backend" ]]; then
+              SHOULD_RUN="true"
+            fi
+          fi
+          echo "should_run=$SHOULD_RUN" >> $GITHUB_OUTPUT
+      
+      - name: Set image variables
+        id: set_vars
+        if: steps.check.outputs.should_run == 'true'
+        run: |
+          if [[ "${{ matrix.image_type }}" == "comet" ]]; then
+            IMAGE_NAME="${{ inputs.image }}-comet"
+          else
+            IMAGE_NAME="${{ inputs.image }}"
+          fi
+          echo "image_name=$IMAGE_NAME" >> $GITHUB_OUTPUT
 
-        - name: Save opik-sandbox-executor-python
-          if: inputs.image == 'opik-python-backend'
-          run: |
-            docker pull ${{env.DOCKER_REGISTRY}}/opik-sandbox-executor-python:${{inputs.version}}
-            docker save ${{env.DOCKER_REGISTRY}}/opik-sandbox-executor-python:${{inputs.version}} | gzip > apps/opik-python-backend/opik-sandbox-executor-python.tar.gz
-            
-        - name: Login to GHCR
-          uses: docker/login-action@v3
-          with:
-            registry: ${{env.DOCKER_REGISTRY}}
-            username: "github-actions"
-            password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Checkout
+        if: steps.check.outputs.should_run == 'true'
+        uses: actions/checkout@v4.1.1
+        with:
+          ref: ${{ inputs.build_from }}
 
-        - name: Set up Docker Buildx
-          uses: docker/setup-buildx-action@v3
+      - name: Save opik-sandbox-executor-python
+        if: steps.check.outputs.should_run == 'true' && inputs.image == 'opik-python-backend'
+        run: |
+          docker pull ${{env.DOCKER_REGISTRY}}/opik-sandbox-executor-python:${{inputs.version}}
+          docker save ${{env.DOCKER_REGISTRY}}/opik-sandbox-executor-python:${{inputs.version}} | gzip > apps/opik-python-backend/opik-sandbox-executor-python.tar.gz
 
-        - name: Build and Push Docker Image
-          uses: docker/build-push-action@v6
-          with:
-            context: apps/${{ inputs.image }}/
-            platforms: ${{ (inputs.is_release && inputs.image != 'opik-guardrails-backend') && 'linux/amd64,linux/arm64' || 'linux/amd64' }}
-            cache-from: type=registry,ref=${{ env.DOCKER_REGISTRY }}/${{ inputs.image }}:${{ inputs.is_release && 'latest' || 'main' }}
-            provenance: false
-            push: true
-            tags: |
-              ${{env.DOCKER_REGISTRY}}/${{ inputs.image }}:${{inputs.version}}
-              ${{ inputs.is_release && format('{0}/{1}:latest', env.DOCKER_REGISTRY, inputs.image) || '' }}
-              ${{ github.ref == 'refs/heads/main' && format('{0}/{1}:main', env.DOCKER_REGISTRY, inputs.image) || '' }}
-            build-args: |
-              OPIK_VERSION=${{inputs.version}}
+      - name: Login to GHCR
+        if: steps.check.outputs.should_run == 'true'
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-        - name: Build and Push Docker Image for Comet integration
-          if: inputs.build_comet_image
-          uses: docker/build-push-action@v6
-          with:
-            context: apps/${{ inputs.image }}/
-            platforms: ${{ inputs.is_release && 'linux/amd64,linux/arm64' || 'linux/amd64' }}
-            cache-from: type=registry,ref=${{ env.DOCKER_REGISTRY }}/${{ inputs.image }}-comet:${{ inputs.is_release && 'latest' || 'main' }}
-            provenance: false
-            push: true
-            tags: |
-              ${{env.DOCKER_REGISTRY}}/${{ inputs.image }}-comet:${{inputs.version}}
-              ${{ inputs.is_release && format('{0}/{1}-comet:latest', env.DOCKER_REGISTRY, inputs.image) || '' }}
-              ${{ github.ref == 'refs/heads/main' && format('{0}/{1}-comet:main', env.DOCKER_REGISTRY, inputs.image) || '' }}
-            build-args: |
-              ${{inputs.comet_build_args}}
-              OPIK_VERSION=${{inputs.version}}
-              SENTRY_ENABLED=true
-              SENTRY_DSN=${{secrets.OPIK_FE_SENTRY_DSN}}
-            secrets: |
-              OPIK_FE_SENTRY_DSN=${{secrets.OPIK_FE_SENTRY_DSN}}
-              GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
+      - name: Set up Docker Buildx
+        if: steps.check.outputs.should_run == 'true'
+        uses: docker/setup-buildx-action@v3
 
-        - name: Write Build Summary
-          run: |
-            echo "### Docker images pushed:" >> $GITHUB_STEP_SUMMARY
-            echo "${{env.DOCKER_REGISTRY}}/${{ inputs.image }}:${{inputs.version}}" >> $GITHUB_STEP_SUMMARY
-            if [[ "${{ inputs.is_release }}" == "true" ]]; then
-              echo "${{env.DOCKER_REGISTRY}}/${{ inputs.image }}:latest" >> $GITHUB_STEP_SUMMARY
-              if [[ "${{ inputs.image }}" == "guardrails" ]]; then
-                echo "Built for platforms: linux/amd64" >> $GITHUB_STEP_SUMMARY
-              else
-                echo "Built for platforms: linux/amd64, linux/arm64" >> $GITHUB_STEP_SUMMARY
-              fi
-            else
+      - name: Build and Push Docker Image
+        if: steps.check.outputs.should_run == 'true'
+        id: build
+        uses: docker/build-push-action@v6
+        with:
+          context: apps/${{ inputs.image }}/
+          platforms: linux/${{ matrix.platform }}
+          cache-from: type=registry,ref=${{ env.DOCKER_REGISTRY }}/${{ steps.set_vars.outputs.image_name }}:${{ inputs.is_release && 'latest' || 'main' }}
+          provenance: false
+          outputs: type=image,name=${{ env.DOCKER_REGISTRY }}/${{ steps.set_vars.outputs.image_name }},push-by-digest=true,name-canonical=true,push=true
+          build-args: |
+            OPIK_VERSION=${{ inputs.version }}
+            ${{ matrix.image_type == 'comet' && inputs.comet_build_args || '' }}
+            ${{ matrix.image_type == 'comet' && 'SENTRY_ENABLED=true' || '' }}
+            ${{ matrix.image_type == 'comet' && format('SENTRY_DSN={0}', secrets.OPIK_FE_SENTRY_DSN) || '' }}
+          secrets: |
+            ${{ matrix.image_type == 'comet' && format('OPIK_FE_SENTRY_DSN={0}', secrets.OPIK_FE_SENTRY_DSN) || '' }}
+            GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
+
+      - name: Export digest
+        if: steps.check.outputs.should_run == 'true'
+        run: |
+          mkdir -p /tmp/digests/${{ steps.set_vars.outputs.image_name }}
+          digest="${{ steps.build.outputs.digest }}"
+          echo "${digest#sha256:}" > "/tmp/digests/${{ steps.set_vars.outputs.image_name }}/${{ matrix.platform }}.digest"
+
+      - name: Upload digest
+        if: steps.check.outputs.should_run == 'true'
+        uses: actions/upload-artifact@v4
+        with:
+          name: digests-${{ steps.set_vars.outputs.image_name }}-${{ matrix.platform }}
+          path: /tmp/digests/${{ steps.set_vars.outputs.image_name }}/*
+          if-no-files-found: error
+          retention-days: 1
+
+  merge:
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    strategy:
+      matrix:
+        include:
+          - image_type: regular
+            image_suffix: ""
+          - image_type: comet
+            image_suffix: "-comet"
+    steps:
+      - name: Check if job should run
+        id: check
+        run: |
+          SHOULD_RUN="false"
+          if [[ "${{ matrix.image_type }}" == "regular" ]] || [[ "${{ inputs.build_comet_image }}" == "true" ]]; then
+            SHOULD_RUN="true"
+          fi
+          echo "should_run=$SHOULD_RUN" >> $GITHUB_OUTPUT
+      
+      - name: Set image variables
+        id: set_vars
+        if: steps.check.outputs.should_run == 'true'
+        run: |
+          if [[ "${{ matrix.image_type }}" == "comet" ]]; then
+            IMAGE_NAME="${{ inputs.image }}-comet"
+          else
+            IMAGE_NAME="${{ inputs.image }}"
+          fi
+          echo "image_name=$IMAGE_NAME" >> $GITHUB_OUTPUT
+
+      - name: Download digests
+        if: steps.check.outputs.should_run == 'true'
+        uses: actions/download-artifact@v4
+        with:
+          path: /tmp/digests/${{ steps.set_vars.outputs.image_name }}
+          pattern: digests-${{ steps.set_vars.outputs.image_name }}-*
+          merge-multiple: true
+
+      - name: Set up Docker Buildx
+        if: steps.check.outputs.should_run == 'true'
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to GHCR
+        if: steps.check.outputs.should_run == 'true'
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Create manifest list and push tags
+        if: steps.check.outputs.should_run == 'true'
+        run: |
+          cd /tmp/digests/${{ steps.set_vars.outputs.image_name }}
+          
+          # Collect all digests
+          DIGESTS=""
+          for digest_file in $(find . -name "*.digest" -type f); do
+            DIGESTS="$DIGESTS ${{ env.DOCKER_REGISTRY }}/${{ steps.set_vars.outputs.image_name }}@sha256:$(cat $digest_file)"
+          done
+          
+          # Build tags
+          TAGS="${{ env.DOCKER_REGISTRY }}/${{ steps.set_vars.outputs.image_name }}:${{ inputs.version }}"
+          if [[ "${{ inputs.is_release }}" == "true" ]]; then
+            TAGS="$TAGS ${{ env.DOCKER_REGISTRY }}/${{ steps.set_vars.outputs.image_name }}:latest"
+          fi
+          if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
+            TAGS="$TAGS ${{ env.DOCKER_REGISTRY }}/${{ steps.set_vars.outputs.image_name }}:main"
+          fi
+          
+          # Create and push manifest
+          TAG_ARGS=""
+          for tag in $TAGS; do
+            TAG_ARGS="$TAG_ARGS -t $tag"
+          done
+          docker buildx imagetools create $TAG_ARGS $DIGESTS
+
+      - name: Write Build Summary
+        if: steps.check.outputs.should_run == 'true'
+        run: |
+          echo "### Docker images pushed: ${{ steps.set_vars.outputs.image_name }}" >> $GITHUB_STEP_SUMMARY
+          echo "${{ env.DOCKER_REGISTRY }}/${{ steps.set_vars.outputs.image_name }}:${{ inputs.version }}" >> $GITHUB_STEP_SUMMARY
+          if [[ "${{ inputs.is_release }}" == "true" ]]; then
+            echo "${{ env.DOCKER_REGISTRY }}/${{ steps.set_vars.outputs.image_name }}:latest" >> $GITHUB_STEP_SUMMARY
+            if [[ "${{ inputs.image }}" == "opik-guardrails-backend" ]]; then
               echo "Built for platforms: linux/amd64" >> $GITHUB_STEP_SUMMARY
+            else
+              echo "Built for platforms: linux/amd64, linux/arm64" >> $GITHUB_STEP_SUMMARY
             fi
-            
-            if [[ "${{ inputs.build_comet_image }}" == "true" ]]; then
-              echo "### Comet Integration Image" >> $GITHUB_STEP_SUMMARY
-              echo "${{env.DOCKER_REGISTRY}}/${{ inputs.image }}-comet:${{inputs.version}}" >> $GITHUB_STEP_SUMMARY
-              if [[ "${{ inputs.is_release }}" == "true" ]]; then
-                echo "${{env.DOCKER_REGISTRY}}/${{ inputs.image }}-comet:latest" >> $GITHUB_STEP_SUMMARY
-                echo "Built for platforms: linux/amd64, linux/arm64" >> $GITHUB_STEP_SUMMARY
-              else
-                echo "Built for platforms: linux/amd64" >> $GITHUB_STEP_SUMMARY
-              fi
-            fi
-        
+          else
+            echo "Built for platforms: linux/amd64" >> $GITHUB_STEP_SUMMARY
+          fi
