Add link to GitHub Container Registry in workflow summary for easier access to built Docker images

--- a/.github/workflows/build_and_push_docker.yaml
+++ b/.github/workflows/build_and_push_docker.yaml
@@ -275,3 +275,5 @@ jobs:
           else
             echo "Built for platforms: linux/amd64" >> $GITHUB_STEP_SUMMARY
           fi
+          echo "- [View on GitHub Container Registry](https://github.com/${{ github.repository }}/pkgs/container/opik/${{ steps.set_vars.outputs.image_name }})" >> $GITHUB_STEP_SUMMARY
+
