--- a/deployment/helm_chart/opik/templates/additonal-ca-certs.yaml
+++ b/deployment/helm_chart/opik/templates/additonal-ca-certs.yaml
@@ -2,17 +2,17 @@
 apiVersion: v1
 kind: {{ ternary "Secret" "ConfigMap" .Values.caCerts.additionalCACertsInSecret }}
 metadata:
-  name: {{ include "opik.name" $ }}-extra-ca-certs
+  name: {{ include "opik.name" . }}-extra-ca-certs
   {{- if .Values.caCerts.additionalCACertsInSecret }}
 type: Opaque
   {{- end }}
 data:
   {{- range .Values.caCerts.additionalCACerts }}
   {{ .name }}.pem: |
-    {{- if .Values.caCerts.additionalCACertsInSecret }}
-    {{ .content | b64enc | indent 4 }}
+    {{- if $.Values.caCerts.additionalCACertsInSecret }}
+    {{- .content | b64enc | nindent 4 }}
     {{- else }}
-    {{ .content | indent 4 }}
+    {{- .content | nindent 4 }}
     {{- end }}
   {{- end }}
 {{- end }}
