Update GitHub Actions workflow to improve run name formatting for multi-architecture builds

--- a/.github/workflows/build_and_push_docker.yaml
+++ b/.github/workflows/build_and_push_docker.yaml
@@ -1,4 +1,6 @@
-name: "Build Docker Images Multi-Arch ${{ github.event.inputs.image }}"
+name: "Build Docker Images Multi-Arch"
+
+run-name: "Build ${{ inputs.image }}${{ inputs.build_comet_image && '-comet' || '' }} - ${{ inputs.version }}"
 
 on:
   workflow_call:
