Fix cacert projection volume def so that it is in a list

--- a/deployment/helm_chart/opik/templates/deployment.yaml
+++ b/deployment/helm_chart/opik/templates/deployment.yaml
@@ -210,7 +210,7 @@ spec:
       volumes:
       {{- if $value.usesJavaTrustStore }}
         {{- if $.Values.caCerts.overwriteJavaCATrustStore.enabled }}
-        {{- toYaml $.Values.caCerts.overwriteJavaCATrustStore.volume | nindent 8 }}
+        {{- toYaml (list $.Values.caCerts.overwriteJavaCATrustStore.volume) | nindent 8 }}
         {{- else if (or $.Values.caCerts.additionalCACerts $.Values.caCerts.existingAdditionalCACertsRef) }}
         - name: additonal-ca-certificates
           {{- if $.Values.caCerts.additionalCACertsInSecret }}
