--- a/sdks/typescript/package.json
+++ b/sdks/typescript/package.json
@@ -73,13 +73,13 @@
     "typescript-eslint": "^8.24.0",
     "vite-tsconfig-paths": "^5.1.3",
     "vitest": "^3.0.5",
-    "zod": "^3.25.55"
+    "zod": "^3.25.76"
   },
   "engines": {
     "node": ">=18"
   },
   "peerDependencies": {
-    "zod": "^3.25.55"
+    "zod": "^3.25.55 || ^4.0.0"
   },
   "peerDependenciesMeta": {
     "zod": {
