--- a/sdks/opik_optimizer/pyproject.toml
+++ b/sdks/opik_optimizer/pyproject.toml
@@ -29,6 +29,10 @@ dependencies = [
 dev = [
     "pytest",
     "pytest-cov",
+    "pytest-xdist",
+    "pytest-asyncio",
+    "pytest-env",
+    "pytest-profiling",
     # "google-adk",
     "langgraph",
     "pre-commit",
