--- a/.github/workflows/opik-optimizer-unit-tests.yaml
+++ b/.github/workflows/opik-optimizer-unit-tests.yaml
@@ -9,6 +9,10 @@ on:
 env:
   OPIK_ENABLE_LITELLM_MODELS_MONITORING: False
   OPIK_SENTRY_ENABLE: False
+  HF_HUB_OFFLINE: true
+  HF_DATASETS_OFFLINE: true
+  HF_HUB_ENABLE_PROGRESS_BARS: "0"
+  HF_HUB_DISABLE_TELEMETRY: "1"
 
 permissions:
   contents: read
